# retro-gtk

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  HACKING.md  Makefile  Makefile.am  Makefile.in  Makefile.valadoc  NEWS  README.md  UNIMPLEMENTED.md  configure.ac  doc.sh  index.html  meson.build  meson_options.txt  retro-gobject.doap  retro-gtk.doap  run-tests.sh  style.css
demos/: Makefile.am  meson.build  retro-demo.c
doc/: index.html  libretro-core-descriptor.xml  meson.build  reference-test-case.xml  retro-gtk-doc.xml
doc/xml/: gtkdocentities.ent.in  meson.build
retro/: Audio.vala  AudioHandler.vala  AudioInput.vala  AudioInterface.vala  AudioSamples.vala  Camera.vala  CameraBuffer.vala  Controller.vala  Core.vala  CoreCallbackHandler.vala  CoreDelegates.vala  CoreFactory.vala  Device.vala  Disk.vala  DiskController.vala  Environment.vala  EnvironmentCommand.vala  FrameTime.vala  GameInfo.vala  GameType.vala  Hardware.vala  HardwareRender.vala  Input.vala  InputHandler.vala  InputInterface.vala  Keyboard.vala  Language.vala  Location.vala  Log.vala  LogLevel.vala  Makefile.am  Memory.vala  MemoryType.vala  Message.vala  Module.vala  PerfCounter.vala  PerfLevel.vala  Performance.vala  PixelFormat.vala  Region.vala  (+49 more)
retro-gobject/: Makefile.am  audio.vala  av-info.vala  camera.vala  core-factory.vala  core.vala  disk-controller.vala  frame-time.vala  game-info.vala  game-type.vala  hardware-render.vala  language.vala  libretro-environment.h  location.vala  module.vala  performance.vala  region.vala  retro-core-descriptor-error.vala  retro-core.c  retro-environment-core.h  retro-environment-input.h  retro-environment-interfaces.c  retro-environment-interfaces.h  retro-environment-variables.h  retro-environment-video.h  retro-environment.c  retro-gobject-0.2.pc.in  retro-gobject-0.3.pc.in  retro-gobject-0.4.pc.in  retro-gobject-0.6.pc.in  retro-gobject-0.8.pc.in  retro-module-query.vala  retro.vala  rumble.vala  sensor.vala  subsystem.vala  system-info.vala  video.vala
retro-gobject/audio/: pa-player.vala
retro-gobject/input/: controller.vala  gamepad-button-type.vala  gamepad-configuration.vala  input-device-manager.vala  input.vala  keyboard.vala  mouse.vala
retro-gobject/log/: file-stream-log.vala  log.vala
retro-gobject/loop/: loop.vala  main-loop.vala  threaded-loop.vala
retro-gobject/vapi/: config.vapi
retro-gobject/variable/: options.vala  variables.vala
retro-gobject/video/: cairo-display.vala
retro-gtk/: AudioDevice.vala  ControllerDevice.vala  Display.vala  FileStreamLogger.vala  GamepadView.vala  KeyboardBox.vala  KeyboardBoxJoypadAdapter.vala  Loop.vala  MainLoop.vala  Makefile.am  Options.vala  RetroGtk.vala  Runnable.vala  Runner.vala  ThreadedLoop.vala  av-info.vala  core-error.vala  core.vala  disk-controller.vala  game-info.vala  memory.vala  meson.build  module.vala  retro-analog-id.c  retro-analog-id.h  retro-analog-index.c  retro-analog-index.h  retro-bml-private.h  retro-bml.c  retro-cairo-display.c  retro-cairo-display.h  retro-controller-codes.c  retro-controller-codes.h  retro-controller-iterator-private.h  retro-controller-iterator.c  retro-controller-iterator.h  retro-controller-type.c  retro-controller-type.h  retro-controller.c  retro-controller.h  (+123 more)
retro-gtk/audio/: AudioDevice.vala  AudioPlayer.vala  PaPlayer.vala  pa-player.vala
retro-gtk/glsl-filters/: bicubic.filter  bicubic.fs  crt-simple.filter  crt-simple.vs  lcd-grid.filter  lcd-grid.fs  sharp.filter  sharp.fs  sharp.vs
retro-gtk/input/: ControllerDevice.vala  ControllerHandler.vala  Gamepad.vala  GamepadButtonType.vala  GamepadConfiguration.vala  GamepadConfigurationDialog.vala  GamepadView.vala  InputDeviceManager.vala  Keyboard.vala  KeyboardBox.vala  KeyboardBoxJoypadAdapter.vala  KeyboardGamepadAdapter.vala  KeyboardGamepadConfiguration.vala  KeyboardGamepadConfigurationDialog.vala  KeyboardState.vala  Mouse.vala  VirtualGamepad.vala  controller.vala  device.vala  gamepad-button-type.vala  gamepad-configuration-dialog.vala  gamepad-configuration.vala  gamepad-view.vala  gamepad.vala  input-device-manager.vala  input-device.vala  input.vala  keyboard-state.vala  keyboard.vala  mouse.vala  retro-gamepad-configuration.c  retro-gamepad-input.c  retro-gamepad-input.h  retro-gamepad.c  (+2 more)
retro-runner/: ipc-runner-impl-private.h  ipc-runner-impl.c  meson.build  retro-core-private.h  retro-core.c  retro-core.h  retro-disk-control-callback-private.h  retro-environment-private.h  retro-environment.c  retro-game-info-private.h  retro-game-info.c  retro-gl-renderer-private.h  retro-gl-renderer.c  retro-hw-render-callback-private.h  retro-input-descriptor-private.h  retro-input-descriptor.c  retro-main-loop-source-private.h  retro-main-loop-source.c  retro-module-private.h  retro-module.c  retro-pa-player-private.h  retro-pa-player.c  retro-proc-address-private.h  retro-renderer-private.h  retro-renderer.c  retro-runner-enums.c.in  retro-runner-enums.h.in  retro-runner.c  retro-system-av-info-private.h  retro-system-info-private.h
shared/: make-ipc-runner-private.sh  meson.build  org.gnome.Retro.Runner.xml  retro-controller-codes-private.h  retro-controller-codes.c  retro-controller-codes.h  retro-controller-state-private.h  retro-controller-state.c  retro-controller-type.c  retro-controller-type.h  retro-core-error-private.h  retro-debug-private.h  retro-debug.c  retro-error-private.h  retro-error.c  retro-framebuffer-private.h  retro-framebuffer.c  retro-gl-private.h  retro-input-private.h  retro-input.c  retro-input.h  retro-keyboard-key-private.h  retro-memfd-private.h  retro-memfd.c  retro-memory-type.c  retro-pixel-format-private.h  retro-pixel-format.c  retro-rumble-effect.c  retro-rumble-effect.h
tests/: libretro.h  meson.build  retro-dummy.c  retro-dummy.reftest.in  retro-dummy.test.in  retro-reftest-file.c  retro-reftest-file.h  retro-reftest.c  retro-test-controller.c  retro-test-controller.h  test-bml.c  test-bml.gresource.xml  test-core-descriptor.c  test-core-descriptor.gresource.xml  test-core.c  test.bml  update-from-retroarch.sh
(+122 files in other folders)
